fixed the flex wrap

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -443,6 +443,7 @@ a.like-button {
     #action-list {
         display:flex;
         gap: 10px;
+        flex-flow: wrap;
     }
 
     .action {
